--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -11,10 +11,14 @@
 
   <!-- 합쳐지고 최소화된 최신 CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-  <link href="/lib/css/" rel="stylesheet">
+<!--  <link href="/lib/css/" rel="stylesheet">-->
 
   <!-- 공통 스크립트-->
-  <script src="/lib/js/"></script>
+<!--  <script src="/lib/js/"></script>-->
+  <script
+    src="https://code.jquery.com/jquery-3.6.0.slim.js"
+    integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY="
+    crossorigin="anonymous"></script>
 
 
   <style>
@@ -28,8 +32,6 @@
     <div layout:fragment="content"></div>
     <footer th:replace="fragments/common/footer :: footerFragment"></footer>
   </div>
-<!-- Custom scripts for all pages-->
-<script src="/lib/js/sb-admin-2.min.js"></script>
 
 </body>
 </html>
