--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,13 @@
 <div layout:fragment="content">
   <!--실 결재양식 내용 부분 시작 -->
 
+  <style>
+    #bottomTable tr,
+    #bottomTable th,
+    #bottomTable td{
+      border: none ;
+    }
+  </style>
   <br>
 
   <div style ="font-size: 11px; border: none; display:none; text-align : right" id="doc_complet_no">
@@ -18,111 +25,85 @@
     <span id="docNo"></span>
   </div>
 
-  <table class="tableStyle linePlus mt10 multi-row-table sortable" id="headerTitle">
-    <colgroup>
-      <col style="width:15%">
-      <col style="width:70%">
-      <col style="width:15%">
-    </colgroup>
+  <table class="tableStyle linePlus mt10">
+    <tbody>
     <tr>
-      <td rowspan="2" style=" border:hidden;text-align:center">
+      <th rowspan="3">피위임인</th>
+      <th>성명</th>
+      <td>
+        <input type="text" data-type="mField" id="name" value="{{ doc.BodyContext.name }}">
       </td>
-      <td style=" border:hidden; font-size:23px;text-align:center">
-        <strong>㈜ 올레이어 공문</strong>
+      <th>직책</th>
+      <td>
+        <input type="text" data-type="mField" id="position" value="{{ doc.BodyContext.position }}">
       </td>
     </tr>
     <tr>
-      <td style=" border:hidden;font-size:12px; text-align:center" >
-        <strong>서울시 영등포구 국회대로70길 15-1 404~411호(여의도동, 극동VIP빌딩), Tel) 02-6677-7450 fax)02-704-7946</strong>
+      <th>주민등록번호</th>
+      <td colspan="3">
+        <input type="text" data-type="mField" id="userNumber" value="{{ doc.BodyContext.userNumber }}">
       </td>
     </tr>
-
+    <tr>
+      <th>주소</th>
+      <td colspan="3">
+        <input type="text" data-type="mField" id="addr" value="{{ doc.BodyContext.addr }}">
+      </td>
+    </tr>
+    </tbody>
   </table>
-
-
-  <hr color="black" width="99%" size="0.5">
-  <b>
-    <table border="0" style="letter-spacing: 1px; font-size:13px;">
-
-      <colgroup>
-        <col style="width: 12%">
-        <col style="width: 60%">
-        <col style="width: 12%">
-        <col style="width: 16%">
-      </colgroup>
-      <tbody>
-      <tr>
-        <td>문 서 번 호</td>
-        <td colspan="3">
-          <input style="width: 70%; border: none;" placeholder="입력" type="text" data-type="mField" id="docNumber" value="{{ doc.BodyContext.docNumber }}">
-        </td>
-      </tr>
-      <tr>
-        <td>시 행 일 자</td>
-        <td colspan="3">
-          <input style="width: 90%; border: none" placeholder="입력" type="text" data-type="mField" id="whenDt" value="{{ doc.BodyContext.whenDt }}">
-        </td>
-      </tr>
-      <tr>
-        <td>수 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;신</td>
-        <td colspan="3">
-          <input placeholder="수신 입력" type="text" data-type="mField" id="NO" value="{{ doc.BodyContext.NO }}" style="width:99%; border:hidden">
-        </td>
-      </tr>
-      <tr>
-        <td>발 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;신</td>
-        <td colspan="3">
-          <input placeholder="발신 입력" type="text" data-type="mField" id="send" value="{{ doc.BodyContext.send }}" style="width:99%; border:hidden">
-        </td>
-      </tr>
-      <tr>
-        <td>참 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;조</td>
-        <td colspan="3">
-          <input placeholder="발신 입력" type="text" data-type="mField" id="reference" value="{{ doc.BodyContext.reference }}" style="width:99%; border:hidden">
-        </td>
-      </tr>
-      <tr>
-        <td>제 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;목</td>
-        <td colspan="3" id="tblFormSubject">
-          <input placeholder="제목 입력" type="text" data-type="dField" id="Subject" value="{{ doc.FormInstanceInfo.Subject }}" title="제목" data-model="Subject" data-binding="pre" style="width:99%; border:hidden" required="" >
-        </td>
-      </tr>
-      </tbody>
-    </table>
-  </b>
-
-
-  <hr color="black" width="99%" size="0.5">
-
 
   <!-- 에디터 시작 -->
   <div id="divWebEditorContainer" data-element-type="editor">
   </div>
   <!-- 에디터 종료 -->
 
-
-  <table style="ext-align: center; width: 100%">
+  <table class="tableStyle linePlus mt10" id="bottomTable">
     <tbody>
     <tr>
-      <td colspan="4" style="border-bottom: none">
-        <div style="padding-top: 25px; text-align: center;">
+      <td colspan="2" style="border-bottom: none">
+        <div style="padding-top: 25px; padding-bottom: 50px; text-align: center;">
           <input style="width: 30%; text-align: center; font-size: 17px; font-weight: bold; border: none" type="text" data-type="mField" id="today" value="{{ doc.BodyContext.today }}" autocomplete="off" readonly="readonly">
         </div>
       </td>
     </tr>
     <tr>
-      <td colspan="4">
-        <div style="padding-top: 40px; margin-bottom: 30px; font-size: 25px; font-weight: bold; text-align: center;">
-          <p style="margin-bottom: 10px">주식회사 올레이어</p>
-          <span>대표이사 : 윤 석 호</span>
-          <span>
+      <td style="text-align: right">(위임자)</td>
+    </tr>
+    <tr>
+      <td style="text-align: right">사업자등록번호</td>
+      <td>119-81-72660</td>
+    </tr>
+    <tr>
+      <td style="text-align: right">상&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;호</td>
+      <td>㈜올레이어</td>
+    </tr>
+    <tr>
+      <td style="text-align: right">성&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;명</td>
+      <td>
+        <span>대표이사 : 윤 석 호</span>
+        <span>
 					<img id="ImgSeal" style="height: 78px; width: 78px;" src="/HtmlSite/smarts4j_n/covicore/resources/images/covision/no_img.gif">
 				</span>
-        </div>
+      </td>
+
+    </tr>
+    <tr>
+      <td style="text-align: right">주&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;소</td>
+      <td>서울시 영등포구 국회대로70길 15-1, 404~411호
+        (여의도동, 극동VIP빌딩)</td>
+    </tr>
+
+    <tr>
+      <td colspan="2" style="text-align: center; padding-top: 50px;">
+        <input type="text" data-type="mField" id="toSend" value="{{ doc.BodyContext.toSend }}">
+        <span>귀하</span>
       </td>
     </tr>
     </tbody>
   </table>
+
+
   <!--실 결재양식 내용 부분 끝 -->
   <th:block layout:fragment="script">
     <script>
